# marine_qc

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  .zenodo.json  .zizmor.yml  AUTHORS.rst  CHANGELOG.rst  CHANGELOG.rst.rej  CHANGES.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  environment-docs.yml  environment-docs.yml.rej  environment.yml  pyproject.toml  pyproject.toml.rej  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml  dependency-review-config.yml  labeler.yml  labeler.yml.rej
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: bump-version.yml  bump-version.yml.rej  cache-cleaner.yml  codeql.yml  cruft-update.yml  dependency-review.yml  first-pull-request.yml  label-on-approval.yml  label.yml  linting.yml  publish-pypi.yml  publish-pypi.yml.rej  scorecard.yml  tag-testpypi.yml  tag-testpypi.yml.rej  testing-suite.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt  requirements_ci.txt.rej
docs/: api.rst  bayesian_buddy_check.rst  buddy_check.rst  conf.py  description.rst  dev_guide.rst  hyperlinks.rst  index.rst  installation.rst  introduction.rst  overview.rst  overview_buoy_tracking.rst  overview_dup.rst  overview_grp.rst  overview_ind.rst  overview_seq.rst  releasing.rst  theoreticals.rst  tool-set-up.rst  track_check.rst
docs/_static/: introduction.rst
docs/api/: api_astro.rst  api_aux.rst  api_buoy.rst  api_dec.rst  api_dup.rst  api_ext.rst  api_grp.rst  api_hlp.rst  api_hum.rst  api_ind.rst  api_loc.rst  api_main_buoy.rst  api_main_dup.rst  api_main_grp.rst  api_main_ind.rst  api_main_plt.rst  api_main_seq.rst  api_seq.rst  api_sph.rst  api_stat.rst  api_tc.rst  api_trk.rst  api_val.rst
docs/notebooks/: data.py  duplicates.ipynb  index.rst  qc_buoys.ipynb  qc_grouped.ipynb  qc_individual.ipynb  qc_sequential.ipynb
docs/notebooks/examples/: data.py
marine_qc/: Climatology.py  __init__.py  auxiliary.py  buoy_tracking_qc.py  external_clim.py  location_control.py  multiple_row_checks.py  plot_qc_outcomes.py  qc_grouped_reports.py  qc_individual_reports.py  qc_sequential_reports.py  spherical_geometry.py  statistics.py  time_control.py  track_check_utils.py
src/marine_qc/: Climatology.py  __init__.py  astronomical_geometry.py  auxiliary.py  buoy_tracking_qc.py  calculate_humidity.py  external_clim.py  location_control.py  multiple_checks.py  multiple_row_checks.py  plot_qc_outcomes.py  qc_grouped_reports.py  qc_individual_reports.py  qc_sequential_reports.py  qc_sequential_reports_old.py  spherical_geometry.py  statistics.py  time_control.py  track_check_utils.py  validations.py
src/marine_qc/duplicate_checker/: __init__.py  _duplicate_settings.py  duplicates.py
src/marine_qc/helpers/: __init__.py  auxiliary.py  calculate_humidity.py  external_clim.py  location_control.py  spherical_geometry.py  time_control.py
src/marine_qc/plotting/: plot_qc_outcomes.py
src/marine_qc/quality_control/: __init__.py  buoy_tracking_qc.py  calculate_humidity.py  external_clim.py  location_control.py  multiple_checks.py  qc_buoy_tracking.py  qc_grouped_reports.py  qc_individual_reports.py  qc_multiple_checks.py  qc_sequential_reports.py  spherical_geometry.py  time_control.py  track_check_utils.py  validations.py
src/marine_qc/visualization/: __init__.py  plot_qc_outcomes.py
tests/: _load_file.py  test_astronomical_geometry.py  test_auxiliaries.py  test_buddy_check.py  test_calculate_humidity.py  test_decorators.py  test_duplicates.py  test_external_clim.py  test_flags.py  test_individual_report_qc.py  test_location_control.py  test_multiple_checks.py  test_multiple_row_check.py  test_next_level_qc.py  test_plot_qc_outcomes.py  test_qc_on_db.py  test_spherical_geometry.py  test_statistics.py  test_time_control.py  test_track_check.py  test_track_check_qc_functions.py  test_trackqc.py  test_validations.py
tests/helpers/: load_file.py
